style scrollbars, fix layer selector overflow

--- a/widget/app.css
+++ b/widget/app.css
@@ -26,9 +26,58 @@
   display: flex;
   align-items: baseline;
   flex-direction: column;
-  max-height: calc(100% - 20px);
 }
 
 .control-container > :not(:first-child) {
   margin-top: 4px;
+}
+
+.control-container.left {
+  top: 20px;
+  left: 20px;
+  max-height: calc(100% - 30px);
+}
+
+.control-container.right {
+  top: 10px;
+  right: 10px;
+  max-height: calc(100% - 20px);
+}
+
+:global(.rdeck) {
+  scrollbar-width: 12px;
+  scrollbar-color: hsla(218, 8%, 40%, 0.6) transparent;
+}
+
+:global(.rdeck) ::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+:global(.rdeck.kepler) ::-webkit-scrollbar-thumb {
+  background-color: hsla(218, 8%, 50%, 0.3);
+}
+
+:global(.rdeck.kepler) ::-webkit-scrollbar-thumb:hover {
+  background-color: hsla(218, 8%, 40%, 0.6);
+}
+
+:global(.rdeck.kepler) ::-webkit-scrollbar-thumb:active {
+  background-color: hsla(218, 8%, 70%, 0.4);
+}
+
+:global(.rdeck.light) ::-webkit-scrollbar-thumb {
+  background-color: hsla(0, 2%, 50%, 0.3);
+}
+
+:global(.rdeck.light) ::-webkit-scrollbar-thumb:hover {
+  background-color: hsla(0, 2%, 70%, 0.6);
+}
+
+:global(.rdeck.light) ::-webkit-scrollbar-thumb:active {
+  background-color: hsla(0, 2%, 40%, 0.4);
+}
+
+:global(.rdeck) ::-webkit-scrollbar-track:vertical {
+  box-shadow: inset 0.5px 0 0 0 var(--separator-color);
 }
