--- a/widget/legend.css
+++ b/widget/legend.css
@@ -3,7 +3,6 @@
 .legend {
   @mixin shadow;
   @mixin map-widget;
-  max-height: calc(100% - 20px);
   overflow-y: auto;
   width: 180px;
 }
